# dedi-link

./: .gitignore  .readthedocs.yaml  README.md  pyproject.toml  requirements.txt  sonar-project.properties
.github/workflows/: code-analysis.yaml  pypi-release.yaml
.run/: Build documents.run.xml  Integration test.run.xml  Mock IDP.run.xml  Multi node 1.run.xml  Multi node 2.run.xml  Multi node 3.run.xml  Test server.run.xml  Unit tests.run.xml
docs/: requirements.txt
docs/source/: about.rst  conf.py  index.rst
docs/source/appendix/: index.rst  terminology.rst
docs/source/design/: class_diagram.puml  index.rst  network.rst  network_behavior.rst  network_sample.dot  system.rst
docs/source/model/: index.rst
docs/source/model/data_model/: node.rst  user.rst
example/: ddl_example.http  multi_node_wrapper.py
example/ddl_example/: app.py  views.py
example/ddl_example/data/db/: database.1.json  database.2.json
example/ddl_example/models/: __init__.py  base_model.py  database.py  network.py  node.py  user.py
example/ddl_example/models/network_interface/: network_interface.py
example/ddl_example/models/network_message/: network_message.py
example/mock_oidc_idp/: app.py  database.py  views.py
example/mock_oidc_idp/data/: mock_config.json
src/dedi_link/etc/: consts.py  enums.py  exceptions.py
src/dedi_link/etc/libpow/: pow_solver.c
src/dedi_link/model/: __init__.py  base.py  base_model.py  config.py  crypto_key.py  data_index.py  network.py  node.py  oidc.py  user.py  user_mapping.py
src/dedi_link/model/async/: base_model.py
src/dedi_link/model/asyncio/: __init__.py  base_model.py  network.py  node.py  user.py
src/dedi_link/model/asyncio/network_interface/: network_interface.py  session.py
src/dedi_link/model/asyncio/network_message/: __init__.py  network_auth_message.py  network_message.py  network_relay_message.py  network_sync_message.py
src/dedi_link/model/network_interface/: __init__.py  auth_interface.py  network_interface.py  session.py
src/dedi_link/model/network_message/: __init__.py  management_key.py  message_metadata.py  network_message.py  network_message_header.py  network_relay_message.py  network_sync_message.py
src/dedi_link/model/network_message/auth_message/: notification.py  request_response.py
src/dedi_link/model/network_message/network_auth_message/: __init__.py  (+8 more)
tests/: conftest.py  pytest.ini  test_mock_op.py
tests/integration_test/model/: test_oidc.py
tests/unit_test/: consts.py
tests/unit_test/etc/: test_libpow.py
tests/unit_test/model/: conftest.py  test_base_model.py  test_config.py  test_crypto_key.py  test_network.py  test_node.py  test_user.py  test_user_mapping.py
tests/unit_test/model/asyncio/: __init__.py  test_base_model.py  test_network.py
tests/unit_test/model/network_interface/: conftest.py  test_network_interface.py  test_session.py
tests/unit_test/model/network_message/: test_management_key.py  test_message_metadata.py  test_network_message.py  test_network_message_header.py  test_network_relay_message.py  test_network_sync_message.py
(+22 files in other folders)
